Upgrade to Java 17 and Jackson 3